src/objects/Custom_Survey_Option__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Survey_Question__c</fullName>
        <label>質問</label>
        <referenceTo>Custom_Survey_Question__c</referenceTo>
        <relationshipLabel>カスタムアンケート 選択肢</relationshipLabel>
        <relationshipName>Custom_Survey_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ダミー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Free_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>自由回答欄</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>選択肢</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>セッション</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>カスタムアンケート 選択肢</relationshipLabel>
        <relationshipName>Custom_Survey_Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum__c</fullName>
        <label>合計</label>
        <summaryForeignKey>Custom_Survey_Answer__c.Custom_Survey_Option__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>カスタムアンケート 選択肢</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Session__c</columns>
        <columns>Custom_Survey_Question__c</columns>
        <columns>NAME</columns>
        <columns>Option__c</columns>
        <columns>Enable_Free_Form__c</columns>
        <columns>Sum__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>CSO-{00000000}</displayFormat>
        <label>選択肢番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>session_must_match_parent</fullName>
        <active>true</active>
        <errorConditionFormula>Session__c &lt;&gt;  Custom_Survey_Question__r.Session__c</errorConditionFormula>
        <errorDisplayField>Session__c</errorDisplayField>
        <errorMessage>Session does not match parent question&apos;s session.</errorMessage>
    </validationRules>
</CustomObject>